<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/paaris"
    tools:context="com.example.hi.paris_guidance.MainActivity">
    <TextView
        style="@style/header"
        android:text="@string/pari"
        android:layout_marginLeft="50dp"/>
    <TextView
        style="@style/header"
        android:text="@string/slogan_text"
        android:layout_marginLeft="230dp"/>
    <TextView
        android:text="@string/slogan_text2"
        style="@style/header"
        android:layout_marginTop="160dp"
        android:id="@+id/select" />
    <TextView
        style="@style/header"
        android:text="@string/famous_plac"
        android:id="@+id/places"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/select"/>
    <TextView
        android:text="@string/churc"
        android:layout_marginTop="25dp"
        android:id="@+id/church"
        android:layout_below="@+id/places"
        style="@style/header"/>
    <TextView
        android:text="@string/bar"
        android:layout_below="@+id/church"
        android:layout_marginTop="25dp"
        android:id="@+id/bars"
        style="@style/header"/>
    <TextView
        android:text="@string/mall"
        android:layout_below="@+id/bars"
        android:layout_marginTop="30dp"
        android:id="@+id/hh"
        style="@style/header"/>
</RelativeLayout>